# Mini-SOC

./: .gitignore  README.md  install.sh  pyproject.toml
config/: config.yaml
config/intel/: assets.yaml  blocklist.txt  geoip.csv
examples/sigma/: net_uncommon_port.yml  proc_creation_recon.yml  unsupported_keywords.yml  unsupported_mimikatz_all.yml
lab/: .gitignore  README.md  docker-compose.yml  firewall-logging.sh
lab/nginx/: default.conf
minisoc/: __init__.py
minisoc/alerting/: alert.py  dedup.py  notify.py  sinks.py
minisoc/cli/: main.py
minisoc/core/: config.py  event.py  live.py  pipeline.py  replay.py  runner.py
minisoc/dashboard/: app.py
minisoc/detections/: behavioral.py  correlation.py  coverage.py  engine.py  loader.py  rule.py  sigma_import.py
minisoc/efficacy/: __init__.py  corpus.py  evaluate.py
minisoc/enrichment/: __init__.py  assets.py  enricher.py  geoip.py  ioc.py
minisoc/parsers/: access_log.py  auth_log.py  firewall.py  sysmon.py
minisoc/risk/: __init__.py  engine.py
minisoc/scenarios/: network_attacks.py  registry.py  ssh_bruteforce.py  sudo_privesc.py  (+2 more)
tests/: test_access_log_parser.py  test_auth_log_parser.py  test_behavioral.py  test_cli.py  test_config.py  test_correlation.py  test_coverage.py  test_dashboard.py  test_dedup.py  test_efficacy.py  test_engine_security.py  test_enrichment.py  test_firewall.py  test_live.py  test_notify.py  test_phase1_rules.py  test_replay.py  test_risk.py  test_runner.py  test_sigma_import.py  test_sinks.py  test_ssh_bruteforce_rule.py  test_sysmon_parser.py  test_triage.py  util.py
(+26 files in other folders)
